# knowledge-driven-development

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: pages.yml  repository-controls.yml
docs/00-foundations/: 01-scope-and-boundaries.md  02-principles.md  principles.md  scope-and-boundaries.md
docs/10-knowledge-architecture/: 11-knowledge-architecture.md  12-artifact-model.md  13-knowledge-lifecycle.md  14-authority-model.md  15-traceability-model.md  16-knowledge-domains.md  README.md  artifact-model.md  authority-model.md  knowledge-domains.md  knowledge-lifecycle.md  traceability-model.md
docs/20-methodology/: 21-process-model.md  22-human-ai-collaboration.md  23-ai-execution-task-contract.md  24-delivery-increment-model.md  25-knowledge-base-curation-workflow.md  ai-execution-task-contract.md  delivery-increment-model.md  human-ai-collaboration.md  process-model.md
docs/30-quality/: 31-verification-and-evidence-model.md  verification-and-evidence-model.md
docs/40-adoption/: 41-adoption-and-conformance-model.md  adoption-and-conformance-model.md
docs/45-experience/: README.md  experience-record-model.md  feedback-lifecycle-proposal.md  observation-response-matrix.md
docs/45-experience/reference-projects/: README.md
docs/50-governance/: evolution-workflow.md  governance-and-release-model.md  knowledge-architecture-principle-mapping.md  metadata-profile.md
docs/50-governance/audits/: AUD-001-kdd-0.1-consistency-review.md  AUD-002-knowledge-driven-development-landscape-review.md  AUD-003-public-baseline-readiness.md
docs/50-governance/baselines/: KGAID-0.1.0.yaml
docs/50-governance/change-proposals/: CP-001-canonical-lifecycle-vocabulary.md  CP-002-revision-bound-human-decision.md  CP-003-baseline-manifest-v2.md  CP-004-experience-record-evidence-based-evolution.md  README.md  (+1 more)
docs/60-approval/: APPROVAL-001-vision.md  APPROVAL-002-approval-process.md  APPROVAL-003-metadata-specification.md  APPROVAL-004-approval-center-ui.md  APPROVAL-005-architecture.md  APPROVAL-006-roadmap.md  README.md  TEST-001-dokument-do-zatwierdzenia.md
site/: index.html
site/assets/: analytics.js  styles.css
site/en/: index.html
site/pl/: index.html
tools/: README.md  check_repository.py
tools/kgaid_approval/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
tools/kgaid_approval/docs/: architecture.md  compatibility.md  installation.md  update.md  usage.md
tools/kgaid_approval/kgaid_approval/: __init__.py  app.py  cli.py  repository.py  web.py
tools/kgaid_approval/src/kgaid_approval/: __init__.py  app.py  cli.py  diagnostics.py  routes.py  web.py
tools/kgaid_approval/tests/: test_kgaid_approval.py
tools/kgaid_docs_archive/: .gitignore  README.md  pyproject.toml
tools/kgaid_docs_archive/kgaid_docs_archive/: __init__.py  archive.py  cli.py
tools/kgaid_docs_archive/tests/: test_archive.py
tools/kgaid_project_review/: .gitignore  README.md  pyproject.toml
tools/kgaid_project_review/kgaid_project_review/: __init__.py  analysis.py  cli.py  profile.py  report.py
tools/kgaid_project_review/tests/: test_review.py
(+9 files in other folders)
