[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kgaid-documentation-approval"
version = "0.1.0"
description = "Local KGAID tool for reviewing and approving Markdown documentation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
kgaid-doc-approval = "kgaid_approval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kgaid_approval*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
