[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kgaid-project-review"
version = "0.1.0"
description = "Read-only, deterministic KGAID project documentation health review."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[project.scripts]
kgaid-project-review = "kgaid_project_review.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kgaid_project_review*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
